# File-Handler

./: CMakeLists.txt  README.md  compile.bat  compile.sh
Lib/: CMakeLists.txt
Lib/header/: FileHandler.h  file_handler.h
Lib/src/: FileHandler.cpp  file_handler.cpp
Sample_01/: Main_01.cpp  Sample_01  lorem_ipsum
Sample_02/: Main_02.cpp  Sample_02
Sample_03/: Main_03.cpp  Sample_03
Samples/: CMakeLists.txt
Samples/Sample_01/: CMakeLists.txt  Main.cpp
Samples/Sample_02/: CMakeLists.txt  Main.cpp
Samples/Sample_03/: CMakeLists.txt  Main.cpp  Salutations
src/: file_handler.cpp  file_handler.h
